# SOL-DEXs-ARBITRAGE

./: .gitignore  Go through everything in this app,.txt  backend_frontend_integration.md  frontend spec.md  integration_diagrams.md  solana-monitor-ui-doc.md  solana_arb_bot_guide.md  solana_arb_visual_guide.md  solana_arb_wireframes.md
Price monitor/: DESIGN.MD  architecture.md  deployment.md  prd_solana_monitor.md  quick_start.md  tech_stack.md  testing_guide.md
Price monitor/solana-monitor-ui/: package-lock.json  package.json  tailwind.config.ts
Price monitor/solana-monitor-ui/app/: globals.css  layout.tsx  page.tsx
Price monitor/solana-monitor-ui/components/: ArbitrageScanner.tsx  Footer.tsx  HUD.tsx  Header.tsx  PriceGrid.tsx  PriceMatrix.tsx  TerminalLog.tsx
Price monitor/solana-monitor-ui/hooks/: usePriceStream.ts  useWebSocket.ts
Price monitor/solana-monitor-ui/lib/: calculateArbitrage.ts  utils.ts
Price monitor/solana-monitor-ui/types/: events.ts
Price monitor/solana-price-monitor/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose.yml  task-definition.json
Price monitor/solana-price-monitor/.github/workflows/: deploy.yml
Price monitor/solana-price-monitor/benches/: price_calculation.rs
Price monitor/solana-price-monitor/scripts/: deploy_update.sh  install_service.sh  setup_oci_env.sh  solana-price-monitor.service
Price monitor/solana-price-monitor/src/: api.rs  lib.rs  main.rs
Price monitor/solana-price-monitor/src/cache/: mod.rs
Price monitor/solana-price-monitor/src/calculator/: amm.rs  mod.rs
Price monitor/solana-price-monitor/src/config/: mod.rs
Price monitor/solana-price-monitor/src/decoder/: meteora.rs  mod.rs  orca.rs  raydium.rs
Price monitor/solana-price-monitor/src/detector/: mod.rs  spatial.rs  statistical.rs  triangular.rs
Price monitor/solana-price-monitor/src/models/: mod.rs  opportunity.rs  price.rs
Price monitor/solana-price-monitor/src/utils/: health.rs  mod.rs
Price monitor/solana-price-monitor/src/websocket/: mod.rs
solana-arb-frontend/: package-lock.json  package.json
solana-arb-frontend/src/app/: globals.css  layout.tsx  page.tsx
(+14 files in other folders)
