[package]
name = "solana-price-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Real-time Solana DEX price monitoring and arbitrage detection"
authors = ["Development Team"]

[dependencies]
# ============================================
# ASYNC RUNTIME
# ============================================
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# ============================================
# WEBSOCKET & NETWORKING
# ============================================
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tonic = "0.11"
prost = "0.12"

# ============================================
# SOLANA SDK (2026 Stable)
# ============================================
solana-sdk = "1.18"
solana-client = "1.18"

# ============================================
# SERIALIZATION
# ============================================
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

# ============================================
# ERROR HANDLING
# ============================================
anyhow = "1.0"
thiserror = "1.0"

# ============================================
# LOGGING & TRACING
# ============================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================
# CONFIGURATION
# ============================================
config = "0.14"
dotenv = "0.15"

# ============================================
# STATISTICS & MATH
# ============================================
statrs = "0.17"

# ============================================
# DATE/TIME
# ============================================
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"
tokio-test = "0.4"

[[bench]]
name = "price_calculation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
